/*
 * Ouroboros - Copyright (C) 2016
 *
 * IRM messages
 *
 *    Sander Vrijders <sander.vrijders@intec.ugent.be>
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */

import "dif_config.proto";

enum irm_msg_code {
        IRM_CREATE_IPCP       =  1;
        IRM_DESTROY_IPCP      =  2;
        IRM_BOOTSTRAP_IPCP    =  3;
        IRM_ENROLL_IPCP       =  4;
        IRM_AP_REG            =  5;
        IRM_AP_UNREG          =  6;
        IRM_FLOW_ACCEPT       =  7;
        IRM_FLOW_ALLOC_RESP   =  8;
        IRM_FLOW_ALLOC        =  9;
        IRM_FLOW_ALLOC_RES    = 10;
        IRM_FLOW_DEALLOC      = 11;
        IPCP_FLOW_REQ_ARR     = 12;
        IPCP_FLOW_ALLOC_REPLY = 13;
        IPCP_FLOW_DEALLOC     = 14;
        IRM_REPLY             = 15;
};

message irm_msg {
        required irm_msg_code code   =  1;
        optional string ap_name      =  2;
        optional string ae_name      =  4;
        optional uint32 api_id       =  3;
        optional uint32 ipcp_type    =  5;
        repeated string dif_name     =  6;
        repeated string args         =  7;
        optional sint32 response     =  8;
        optional string dst_name     =  9;
        optional sint32 port_id      = 10;
        optional int32 pid           = 11;
        optional dif_config_msg conf = 12;
        optional bool autoexec       = 13;
        optional bool hard           = 14;
        optional sint32 result       = 15;
};
